# ChangeLog for sci-libs/gotoblas2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Mar 2012; François Bissey <francois.bissey@canterbury.ac.nz>
  gotoblas2-1.13.ebuild, files/gotoblas2-1.13-sharedlibs.patch:
  More OS X fixes

  15 Mar 2012; François Bissey <francois.bissey@canterbury.ac.nz>
  gotoblas2-1.13.ebuild:
  add *-macos prefix support mirroring openblas

  22 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> +gotoblas2-1.13.ebuild,
  +files/gotoblas2-1.13-aliasing.patch, +files/gotoblas2-1.13-dynamic.patch,
  +files/gotoblas2-1.13-fcheck.patch, +files/gotoblas2-1.13-sharedlibs.patch,
  +metadata.xml:
  Imported from bicatali overlay

  17 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> gotoblas2-1.13.ebuild:
  Fixed include directive in pkgconfig file

  31 May 2011; Sébastien Fabbro <bicatali@gentoo.org> gotoblas2-1.13.ebuild:
  Fixed shared libs. Make ebuild easier to debug with a generated rule
  Makefile instead of dynamic. Switched to EAPI4.

  23 Feb 2011; Sébastien Fabbro <bicatali@gentoo.org> gotoblas2-1.13.ebuild,
  files/gotoblas2-1.13-sharedlibs.patch:
  fixed ldflags propagation

  23 Feb 2011; Sébastien Fabbro <bicatali@gentoo.org> gotoblas2-1.13.ebuild:
  Switched to alternatives-2 framework

  22 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org> gotoblas2-1.13.ebuild,
  metadata.xml:
  Renamed cblas use flag to gotocblas (reserve cblas for external cblas)

*gotoblas2-1.13 (12 Nov 2010)

  12 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +gotoblas2-1.13.ebuild, +files/gotoblas2-1.13-dynamic.patch,
  +files/gotoblas2-1.13-sharedlibs.patch, +metadata.xml:
  Initial import
